force-app/main/default/objects/FEC_Decision_Column__c/FEC_Decision_Column__c.object-meta.xml
<CustomObject>
    <label>Decision Column</label>
    <nameField>
        <label>Column Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Decision Columns</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>