force-app/main/default/objects/FEC_Decision_Column__c/fields/FEC_Column_Type__c.field-meta.xml
<CustomField>
    <fullName>FEC_Column_Type__c</fullName>
    <label>Column Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Condition</fullName>
                <default>true</default>
                <label>Condition</label>
            </value>
            <value>
                <fullName>Action</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>