force-app/main/default/objects/FEC_Decision_Column__c/fields/FEC_Decision_Table__c.field-meta.xml
<CustomField>
    <fullName>FEC_Decision_Table__c</fullName>
    <label>Decision Table</label>
    <referenceTo>FEC_Decision_Table__c</referenceTo>
    <relationshipLabel>Decision Columns</relationshipLabel>
    <relationshipName>Decision_Columns</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>