force-app/main/default/objects/FEC_Decision_Column__c/fields/FEC_Field_API_Mapping__c.field-meta.xml
<CustomField>
    <fullName>FEC_Field_API_Mapping__c</fullName>
    <label>Field API Mapping</label>
    <length>255</length>
    <type>Text</type>
</CustomField>