force-app/main/default/objects/FEC_Decision_Column__c/fields/FEC_MDM_Field__c.field-meta.xml
<CustomField>
    <fullName>FEC_MDM_Field__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MDM Field Definition</label>
    <referenceTo>FEC_Additional_Field__c</referenceTo>
    <relationshipLabel>Decision Columns Mapping</relationshipLabel>
    <relationshipName>Decision_Columns_Mapping</relationshipName>
    <type>Lookup</type>
</CustomField>